Mon Mar  8 09:33:08 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* docs/manpage.example (DESCRIPTION): ".SS macros" -> ".SS macro".

Mon Mar  8 00:16:53 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_extensions): Instead of comparing extensions
	  followed by ids, compare pure sections first, then ids, then
	  extensions. This works around the worst effects of Debian bug
	  #204249, in which we have an incorrect whatis ref xterm(1) in
	  /usr/share/man and a correct real xterm(1x) in /usr/X11R6/man.

Sun Mar  7 23:55:48 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Keep searching for more specific
	  extension matches in section_list even after finding one.

Wed Jan 28 00:15:00 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Add a terrifying hack to make '.B "..."' work in
	  NAME sections. lex is really the wrong tool for this job, I feel.

Tue Jan 27 23:37:58 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Attempt to fix problems with groff requests
	  immediately following .SH NAME. All patterns in the MAN_FILE and
	  MAN_NAME states need to avoid matching trailing newlines, since
	  they're needed by other patterns to detect beginning-of-line.

	  In order to ignore any excess whitespace following .SH NAME, which
	  is how this problem got created, introduce a MAN_PRENAME start
	  condition, which just skips over spacing. Some evil use of yyless
	  is needed to transition properly to the MAN_NAME start condition
	  from this without eating trailing newlines.

Tue Jan 27 21:19:41 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in (LFLAGS): Add -d if LEXGROG_DEBUG=yes.

Wed Dec 24 10:29:16 UTC 2003  Giuseppe Sacco <eppesuig@debian.org>

	* src/whatis.c (usage): Fix usage message for --section
	* updated italian translation.

Wed Dec 24 10:10:16 GMT 2003  Colin Watson  <cjwatson@debian.org>
